--- a/style/contacts.css
+++ b/style/contacts.css
@@ -338,12 +338,70 @@ body {
     font-weight: var(--weight-400);
 }
 
+.succes-created-container {
+    width: calc(1440px - (232px + 456px));
+    position: relative;
+    margin-top: 101px;
+}
+
+.creates-msg {
+    height: 74px;
+    width: 326px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2A3647;
+    border-radius: 20px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.15);
+}
+
+.animate-in {
+    animation: createdMsgIn 300ms linear forwards;
+}
+
+.animate-out {
+    animation: createdMsgOut 300ms linear forwards;
+}
+
+.succesfully-created-msg {
+    color: var(--header-color);
+    font-size: var(--font-size-20);
+    font-weight: var(--weight-400);
+    height: 24px;
+}
+
+.d_none {
+    display: none;
+}
+
 @keyframes contactTemplate {
+    0% {
+        left: 100vw;
+        display: flex;
+    }
+
+    100% {
+        left:0;
+    }
+}
+
+@keyframes createdMsgIn {
     0% {
         left: 100vw;
     }
 
     100% {
-        left:0;
+        left: 0;
+    }
+}
+
+@keyframes createdMsgOut {
+    0% {
+        left: 0;
+    }
+
+    100% {
+        left: 100%;
     }
 }
