--- a/style/add_task.css
+++ b/style/add_task.css
@@ -55,7 +55,7 @@ form{
 }
 
 h2 {
-  margin-top: 100px;
+  margin-top: 80px;
   margin-bottom: 40px;
   margin-left: 10%;
 }
@@ -93,10 +93,12 @@ align-items: center;
   font-style: Regular;
   font-size: 20px;
   background: #ffffff;
+  cursor: pointer;
 }
 
-.priority_wrapper button:hover {
-  box-shadow: 0px 0px 4px 0px #0000001a;
+/* Only apply hover shadow if not active */
+.priority_wrapper button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hover {
+  box-shadow: 0px 0px 4px 0px #0000001a, 0px 4px 4px 0px #00000040;
 }
 
 .medium_btn_active {
@@ -176,6 +178,11 @@ textarea {
 }
 
 input:focus {
+  border: 1px solid #29abe2;
+}
+
+/* Add focus effect for textarea like input */
+textarea:focus {
   border: 1px solid #29abe2;
 }
 
@@ -363,10 +370,6 @@ button {
   background-color: #ffffff;
 }
 
-.asssigned_to li:hover {
-  background: #eeeeee;
-}
-
 .asssigned_to_checkbox {
   position: relative;
   right: 0;
@@ -405,26 +408,74 @@ button {
   white-space: nowrap;
   border: 0;
   border-radius: 10px;
-}
-
-.pb_bubble {
-  height: 42px;
-  width: 42px;
-  margin-right: 8px;
-  flex-shrink: 0;
-  display: inline-block;
-  vertical-align: middle;
+  background: transparent;
+  transition: background 0.15s, color 0.15s;
+  color: #2A3647;
 }
 
 .single_contact p {
   text-align: center;
   font-size: 20px;
+  color: inherit;
 }
 
 .single_contact div {
   display: flex;
   flex-direction: row;
   align-items: center;
+  color: inherit;
+}
+
+#contacts .single_contact.active {
+  background: #091931 !important;
+  color: #fff !important;
+}
+#contacts .single_contact.active p,
+#contacts .single_contact.active div {
+  color: #fff !important;
+}
+#contacts .single_contact:hover,
+#contacts .single_contact.active:hover {
+  background: #2A3647 !important;
+  color: #fff !important;
+}
+#contacts .single_contact:hover p,
+#contacts .single_contact:hover div,
+#contacts .single_contact.active:hover p,
+#contacts .single_contact.active:hover div {
+  color: #fff !important;
+}
+#contacts .single_contact.active .checkbox rect,
+#contacts .single_contact.active .checkbox path {
+  stroke: #fff !important;
+  fill: none !important;
+}
+#contacts .single_contact.active .checkbox {
+  filter: drop-shadow(0 0 1px #fff);
+}
+
+/* Hover for non-active assigned-to list items */
+#contacts .single_contact:not(.active):hover {
+  background: #EEEEEE !important;
+  color: #2A3647 !important;
+}
+#contacts .single_contact:not(.active):hover p,
+#contacts .single_contact:not(.active):hover div {
+  color: #2A3647 !important;
+}
+
+/* Category list: hover background and pointer */
+#categorys .single_contact {
+  cursor: pointer;
+}
+#categorys .single_contact:hover {
+  background: #EEEEEE !important;
+}
+
+/* Both lists: pointer cursor for all list items */
+#contacts .single_contact,
+#categorys .single_contact {
+  cursor: pointer;
 }
 
 .contacts li {
@@ -435,6 +486,7 @@ button {
   padding-left: 10px;
   gap: 8px;
   border-radius: 10px;
+  margin-bottom: 1px;
 }
 
 #contacts {
@@ -530,6 +582,14 @@ button {
   background: #EEEEEE;
 border-radius: 8px;
 cursor: pointer;
+}
+
+/* Remove hover background in editing mode */
+.subtask_item_wrapper_edit,
+.subtask_item_wrapper_edit:hover {
+  background: #ffffff !important;
+  border-bottom: 1px solid #29abe2;
+  cursor: default;
 }
 
 .subtask_item_wrapper {
