styled privacy policy

--- a/style/help.css
+++ b/style/help.css
@@ -37,6 +37,14 @@
   border-radius: 50%;
 }
 
+.link-list {
+  list-style: none;
+}
+
+.mb8 {
+  margin-bottom: 8px;
+}
+
 .mb16 {
   margin-bottom: 16px;
 }
