--- a/style/standart.css
+++ b/style/standart.css
@@ -38,17 +38,18 @@ body {
 .layout {
   display: flex;
   width: 100%;
+  background-color: rgba(246, 247, 248, 1);
   /* max-width: 1440px; */
 }
 
 main {
   display: flex;
   width: 100%;
+  max-width: calc(1440px - 232px);
   flex-direction: column;
-  background-color: rgba(246, 247, 248, 1);
 }
 
-header {
+.main-header {
   width: 100%;
   height: 96px;
   background-color: var(--header-color);
