--- a/style/standart.css
+++ b/style/standart.css
@@ -45,7 +45,7 @@ body {
 main {
   display: flex;
   width: 100%;
-  max-width: calc(1440px - 232px);
+  /* max-width: calc(1440px - 232px); */
   flex-direction: column;
 }
 
