--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -59,6 +59,7 @@
     gap: 40px;
 }
 
+/* input form design */
 .sign_up_section .sign_up_input_group form {
     padding: 12px 21px;
     border-radius: 10px;
@@ -66,6 +67,7 @@
     gap: 20px;
 }
 
+/* input label design */
 .sign_up_section .sign_up_input_group form label {
     display: flex;
     align-items: center;
@@ -82,6 +84,7 @@
     border: none;
 }
 
+/* design for input ul */
 .sign_up_section .sign_up_input_group ul {
     list-style: none;
     display: flex;
@@ -98,6 +101,8 @@
 .sign_up_section .sign_up_input_group input:focus {
     outline: none;
 }
+
+/* input div max content (to keep every svg the same height and width) */
 .sign_up_section .sign_up_input_group label div {
     width: 32px;
     display: flex;
