Revision of the profile menu when clicking on the avatar button

--- a/style/style.css
+++ b/style/style.css
@@ -8,4 +8,5 @@
 @import url(./login.css);
 @import url(./sign_up.css);
 @import url(./keyframes.css);
-@import url(./responsive.css)
+@import url(./responsive.css);
+@import url(./nav_profile_overlay.css);
