--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -67,6 +67,12 @@
     gap: 20px;
 }
 
+.sign_up_section .sign_up_input_group form:focus-within {
+    outline: 1px solid #29ABE2;
+}
+
+
+
 /* input label design */
 .sign_up_section .sign_up_input_group form label {
     display: flex;
@@ -82,6 +88,7 @@
     font-size: 20px;
     font-weight: 400;
     border: none;
+    outline: none;
 }
 
 /* design for input ul */
@@ -96,10 +103,6 @@
 /* input focus and placeholder style */
 .sign_up_section .sign_up_input_group input::placeholder {
     color: #d1d1d1;
-}
-
-.sign_up_section .sign_up_input_group input:focus {
-    outline: none;
 }
 
 /* input div max content (to keep every svg the same height and width) */
