--- a/style/board.css
+++ b/style/board.css
@@ -1,6 +1,7 @@
 .board-page{
     display: flex;
     flex-direction: column;
+    max-width: calc(1440px - 232px);
 }
 
 .board-header{
@@ -40,6 +41,7 @@
     gap: 8px;
     height: 100%;
     cursor: pointer;
+    transition: 100ms;
 }
 
 .board-actions button:hover{
@@ -130,7 +132,9 @@
 .task-assignment section{
     display: flex;
     justify-content: space-between;
-    width: 23%;
+    width: 25%;
+    padding: 0 12px;
+    overflow: hidden;
 }
 
 .task-assignment section svg{
@@ -150,12 +154,20 @@
     justify-content: space-between;
 }
 
+.kanban-column::-webkit-scrollbar{
+    display: none;
+}
+
 .kanban-column{
-    width: 23%;
+    width: 25%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
+    overflow-x: visible;
+    overflow-y: auto;
+    max-height: calc(100vh - 331px);
+    padding: 10px 0;
 }
 
 .kanban-column header{
@@ -184,7 +196,7 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 16px;
-    width: 100%;
+    width: 90%;
 }
 
 .task{
