--- a/style/login.css
+++ b/style/login.css
@@ -32,7 +32,7 @@ body {
 }
 
 /* main design and align / basic background */
-main {
+.login_page {
     height: 100vh;
     display: flex;
     justify-content: center;
