--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -187,7 +187,7 @@
     font-size: 16px;
 }
 
-footer{
+.task-overlay footer{
     display: flex;
     justify-content: flex-end;
     align-items: center;
