--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -170,3 +170,29 @@
     background-color: #091931;
     box-shadow: 0px 4px 4px 0px #00000040;
 }
+
+.signup-overlay-background {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.26);
+}
+
+.signup-overlay-background dialog {
+    color: white;
+    display: flex;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #091931;
+    border: none;
+    border-radius: 20px;
+    padding: 25px 25px;
+}
+
+.signup-overlay-background dialog span {
+    font-size: 20px;
+    font-weight: 400;
+}
