--- a/style/add_task.css
+++ b/style/add_task.css
@@ -14,7 +14,7 @@
   margin-bottom: 16px;
 }
 
-.AD form {
+.ad form {
   position: relative;
 }
 
@@ -42,13 +42,13 @@
   z-index: 4;
 }
 
-.AD h2 {
+.ad h2 {
   margin-top: 80px;
   margin-bottom: 40px;
   margin-left: 10%;
 }
 
-.AD{
+.ad{
   max-width: calc(1440px - 232px);
   max-height: calc(100vh - 180px);
 }
@@ -107,7 +107,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   background: #7ae229 !important;
 }
 
-.AD label {
+.ad label {
   display: inline-block;
   font-family: Inter;
   font-weight: 400;
@@ -117,7 +117,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   margin-bottom: 8px;
 }
 
-.AD span {
+.ad span {
   font-family: Inter;
   font-weight: 400;
   font-style: Regular;
@@ -127,7 +127,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   letter-spacing: 0%;
 }
 
-.AD input {
+.ad input {
   width: 100%;
   opacity: 1;
   padding-top: 12px;
@@ -145,7 +145,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   line-height: 120%;
 }
 
-.AD textarea {
+.ad textarea {
   width: 100%;
   height: 120px;
   opacity: 1;
@@ -166,12 +166,12 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   letter-spacing: 0%;
 }
 
-.AD input:focus {
+.ad input:focus {
   border: 1px solid #29abe2;
 }
 
 /* Add focus effect for textarea like input */
-.AD textarea:focus {
+.ad textarea:focus {
   border: 1px solid #29abe2;
 }
 
@@ -198,18 +198,18 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   cursor: pointer;
 }
 
-.AD input[type="date"] {
+.ad input[type="date"] {
   appearance: none; /* modern way */
   -moz-appearance: textfield; /* Firefox */
   -webkit-appearance: none; /* WebKit */
   position: relative;
 }
 
-.AD input[type="date"]::-webkit-calendar-picker-indicator {
+.ad input[type="date"]::-webkit-calendar-picker-indicator {
   display: none;
 }
 
-.AD select {
+.ad select {
   width: 100%;
   justify-content: space-between;
   opacity: 1;
@@ -222,7 +222,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   border: 1px solid #d1d1d1;
 }
 
-.AD hr {
+.ad hr {
   width: 0px;
 
   opacity: 1;
@@ -232,7 +232,7 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   margin-right: 3%;
 }
 
-.AD button {
+.ad button {
   opacity: 1;
   padding-top: 16px;
   padding-right: 10px;
