added animation to sign up successfully overlay

--- a/style/sign_up.css
+++ b/style/sign_up.css
@@ -183,9 +183,10 @@
 .signup-overlay-background dialog {
     color: white;
     display: flex;
-    left: 50%;
-    top: 50%;
+        left: 50%;
+    bottom: 50%;
     transform: translate(-50%, -50%);
+    animation: slideInFromBottom 1s;
     background-color: #091931;
     border: none;
     border-radius: 20px;
