created all Templates for Task Overlay and created a render Function for the tasks

--- a/style/board.css
+++ b/style/board.css
@@ -233,6 +233,10 @@
     color: white;
 }
 
+.task-label:empty{
+    display: none;
+}
+
 .task-desc{
     display: -webkit-box;
     line-clamp: 2;
