--- a/style/task_overlay.css
+++ b/style/task_overlay.css
@@ -28,6 +28,11 @@
     height: 100vh;
 }
 
+.main-task-label:empty{
+    background-color: transparent;
+    padding: 0;
+}
+
 .task-overlay{
     width: 525px;
     height: fit-content;
@@ -88,9 +93,17 @@
     font-size: 20px;
 }
 
+.main-task-decription:empty{
+    display: none;
+}
+
 .main-task-date{
     display: flex;
     gap: 25px;
+}
+
+.main-task-date:empty{
+    display: none;
 }
 
 .date{
@@ -108,6 +121,10 @@
     gap: 25px;
 }
 
+.main-task-priority:empty{
+    display: none;
+}
+
 .priority-class{
     display: flex;
     align-items: center;
@@ -120,6 +137,10 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
+}
+
+.main-task-assigned-list:empty{
+    display: none;
 }
 
 .assigned{
@@ -150,6 +171,10 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+}
+
+.main-task-subtasks:empty{
+    display: none;
 }
 
 .subtask-list::-webkit-scrollbar{
