--- a/style/add_task.css
+++ b/style/add_task.css
@@ -43,9 +43,7 @@
 }
 
 .AD h2 {
-  margin-top: 80px;
-  margin-bottom: 40px;
-  margin-left: 10%;
+  margin: 80px 0 40px 10%;
 }
 
 .AD{
@@ -149,10 +147,11 @@ button:not(.urgent_btn_active):not(.medium_btn_active):not(.low_btn_active):hove
   width: 100%;
   height: 120px;
   opacity: 1;
-  padding-top: 12px;
+  /* padding-top: 12px;
   padding-right: 21px;
   padding-bottom: 12px;
-  padding-left: 21px;
+  padding-left: 21px; */
+  padding: 12px 21px;
   gap: 10px;
   border-radius: 10px;
   border-width: 1px;
