--- a/style/standart.css
+++ b/style/standart.css
@@ -31,6 +31,7 @@
   --weight-600: 600;
   --weight-700: 700;
 
+  --font-size-12: 12px;
   --font-size-16: 16px;
   --font-size-20: 20px;
   --font-size-21: 21px;
