--- a/style/navbar.css
+++ b/style/navbar.css
@@ -6,7 +6,7 @@
     padding: 64px 0;
     height: 100vh;
     background-color: #2A3647;
-    min-width: 232px;
+    /* min-width: 232px; */
     width: 232px;
 }
 
