--- a/style/style.css
+++ b/style/style.css
@@ -10,3 +10,4 @@
 @import url(./keyframes.css);
 @import url(./responsive.css);
 @import url(./nav_profile_overlay.css);
+@import url(./contacts_responsive.css);
