--- a/style/login.css
+++ b/style/login.css
@@ -140,6 +140,11 @@ body {
     gap: 20px;
 }
 
+/* onclick blue border on input */
+.login_section .input_group form:focus-within {
+    outline: 1px solid #29ABE2;
+}
+
 /* input field with icon align */
 .login_section .input_group form label {
     display: flex;
