--- a/style/style.css
+++ b/style/style.css
@@ -11,3 +11,5 @@
 @import url(./responsive.css);
 @import url(./nav_profile_overlay.css);
 @import url(./contacts_responsive.css);
+@import url(./overlay_board_template.css);
+@import url(./add_task.css);
