--- a/style/board.css
+++ b/style/board.css
@@ -174,6 +174,7 @@
     overflow-y: auto;
     max-height: calc(100vh - 331px);
     padding: 10px 10px;
+    border: 1px dashed transparent;
 }
 
 .task{
@@ -304,4 +305,10 @@
     justify-content: center;
     align-items: center;
     margin-left: -8px;
+}
+
+.drag-area-highlight{
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 24px;
+    border-color: grey;
 }
