--- a/style/standart.css
+++ b/style/standart.css
@@ -15,6 +15,7 @@
   box-sizing: border-box;
   overflow-wrap: break-word;
   hyphens: auto;   
+  -webkit-hyphens: auto;
   touch-action: manipulation
 }
 
