--- a/style/contacts_overlay.css
+++ b/style/contacts_overlay.css
@@ -138,8 +138,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-bottom: 80px;
-    gap: 32px;
+    margin-bottom: 64px;
 }
 
 .create-form-inputfields {
@@ -188,10 +187,6 @@
     width: 24px;
 }
 
-/* .create-form-inputfields-container {
-    height: 66px;
-} */
-
 .create-form-inputfields-required {
     height: 16px;
 }
@@ -206,6 +201,7 @@
     display: flex;
     align-items: center;
     gap: 24px;
+    margin-top: 48px;
 }
 
 .add-contact-buttons button {
