--- a/style/navbar.css
+++ b/style/navbar.css
@@ -94,3 +94,37 @@
     pointer-events: none;
     cursor: default;
 }
+
+@media (max-width: 800px) {
+    .navbar {
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding: 64px 0;
+        height: auto;
+        background-color: #2A3647;
+        /* min-width: 232px; */
+        width: 100%;
+    }
+
+
+    .navbar-content-limiter {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: auto;
+        max-height: 1300px;
+    }
+
+    .nav-list {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 15px;
+        width: 100%;
+    }
+}
