--- a/style/contacts_responsive.css
+++ b/style/contacts_responsive.css
@@ -19,11 +19,11 @@
     }
 
     .add-new-contact-btn {
-        width: 88%;
+        width: 100%;
     }
 
     .contact-list-container {
-        width: 88%;
+        width: 100%;
     }
 
     .contact-list-content {
@@ -37,9 +37,9 @@
         width: 62%;
     }
 
-    .contacts-header {
+    /* .contacts-header {
         width: 100%;
-    }
+    } */
 
     .contact-info-big-container {
         width: 100%;
@@ -99,7 +99,7 @@
 }
 
 
-@media (max-width:1350px) {
+@media (max-width: 1400px) {
     /* body {
         overflow-y: scroll;
     } */
@@ -186,4 +186,213 @@
         width: 77%;
     }
 
+}
+
+@media (max-width: 960px) {
+    .navbar {
+        padding: 0;
+        height: auto;
+        width: 100%;
+        position: fixed;
+        bottom: 0;
+    }
+
+
+    .navbar-content-limiter {
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+        height: fit-content;
+    }
+
+    .nav-list {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        gap: 15px;
+        width: 100%;
+    }
+
+    .navbar-footer {
+        display: none;
+    }
+
+    .navbar-logo {
+        display: none;
+    }
+
+    .navbar-link-content {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        width: 76px;
+        height: 76px;
+        padding: 0;
+        border-radius: 16px;
+    }
+
+    .nav-list li {
+        flex-direction: column;
+        width: 76px;
+        height: 76px;
+
+    }
+
+    .navbar-link {
+        height: auto;
+    }
+
+    .navbar-active {
+        border-radius: 16px;
+    }
+
+}
+
+@media (max-width: 1000px) {
+    /* .contact-list-area {
+        width: 100%;
+    }
+
+    .contact {
+        width: 0%;
+    } */
+
+    .contact-rightside-big-container {
+        width: 100%;
+        /* margin-left: 16px; */
+    }
+
+    .contacts-header {
+        flex-direction: column;
+        align-items: flex-start;
+        height: auto;
+        gap: 8px;
+        margin-top: 32px;
+    }
+
+    .contact-header-second-container {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        height: auto;
+        gap: 16px;
+    }
+
+    .contacts-header-seperator {
+        height: 0;
+        width: 90px;
+    }
+
+    .contact-info-big {
+        gap: 20px;
+    }
+
+    .contact-circle-img-big {
+        height: 100px;
+        width: 100px;
+    }
+}
+
+@media(max-width: 428px) {
+    .add-new-contact-btn-container {
+        display: none;
+    }
+
+    .contact-list-container {
+        position: relative;
+    }
+
+    .responsiv-add-new-contact-container {
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 56px;
+        width: 56px;
+        border-radius: 50%;
+        border: 1px solid #2A3647;
+        background-color: #2A3647;
+        position: fixed;
+        bottom: 112px;
+        right: 16px;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    .responsiv-add-new-contact-container:active {
+        border: 1px solid #29ABE2;
+        background-color: #29ABE2;
+    }
+
+    .contact-rightside-big-container {
+        width: 100%;
+        margin-left: 16px;
+    }
+
+    .contacts-header {
+        flex-direction: column;
+        align-items: flex-start;
+        height: auto;
+        gap: 8px;
+        margin-top: 32px;
+    }
+
+    .contacts-header>h2 {
+        font-size: var(--font-size-47);
+    }
+
+    .contact-header-second-container {
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        height: auto;
+        gap: 16px;
+    }
+
+    .contact-header-second-container>p {
+        font-size: var(--font-size-20);
+    }
+
+    .contacts-header-seperator {
+        height: 0;
+        width: 90px;
+    }
+
+    .contact-template {
+        margin: 40px 0 0 0; 
+    }
+
+    .contact-info-big {
+        gap: 20px;
+    }
+
+    .contact-circle-img-big {
+        height: 80px;
+        width: 80px;
+    }
+
+    .contact-circle-img-big>p {
+        font-size: 27px;
+        font-weight: var(--font-weight-400);
+    }
+
+    .contact-info-big-name {
+        font-size: 36px;
+        font-weight: 700;
+    }
+
+    .contact-info-big-edit {
+        display: none;
+    }
+
+    .contact-inforamtion-txt {
+        height: auto;
+    }
+}
+
+.width-100 {
+    width: 100%;
+}
+
+.width-0 {
+    width: 0%;
 }
